--- a/genesis_ui/config.json
+++ b/genesis_ui/config.json
@@ -1,5 +1,11 @@
 {
-  "name": "Geotab Genesis (Generator UI)",      
+  "name": "Geotab Genesis (Generator UI)",
+  "pageName": {
+    "en": "Geotab Genesis"
+  },
+  "description": {
+    "en": "An interface to generate new Geotab Add-Ins using AI."
+  },
   "supportEmail": "edygohe@gmail.com",
   "version": "1.0.0",
   "translator": "translations/",
